[Android] Create TabSwitcherListEditorPTTest#testClose2Tabs
Wanted to exercise the new TabCountChangedCondition.

Made a couple framework improvements:
- FacilityCheckOut can now leave multiple Facilities.
- Transition.conditionOption() is shorthand to specify extra
  transition Conditions.
- Custom select handlers for ScrollableFacility Items can access
  the selected item to actually click it.

Bug: 329307093
Change-Id: I4dc741462f3981ce304d17182e3306d6523cc1c8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5722090
Commit-Queue: Henrique Nakashima <hnakashima@chromium.org>
Reviewed-by: Calder Kitagawa <ckitagawa@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1329809}